# jnj-langchain

./: .gitignore  ```sh  pyproject.toml  requirements.txt  test.py
ai-poet/: main.py  requirements.txt
chatpdf/: main.py
embeddings/: huggingface.py  huggingface_1.py  korean_medical.py  korean_medical_query.py  medical_rag.py  openai.py
loaders/: text.py
models/: chat_perplexity.py  claude.py  gemini.py  gen_model.py  openai.py  perplexity.py
prompts/: medical_qa.py
